--- a/impl/bad_apple_process_config.json
+++ b/impl/bad_apple_process_config.json
@@ -8,7 +8,7 @@
  "Correct_Hold_Violation" : true,
  "DONE" : false,
  "DOWNLOAD_SPEED" : "default",
- "Disable_Insert_Pad" : false,
+ "Disable_Insert_Pad" : true,
  "ENABLE_CTP" : false,
  "ENABLE_MERGE_MODE" : false,
  "ENCRYPTION_KEY" : false,
@@ -19,7 +19,7 @@
  "EXTERNAL_MASTER_CONFIG_CLOCK" : false,
  "Enable_DSRM" : false,
  "FORMAT" : "binary",
- "FREQUENCY_DIVIDER" : "1",
+ "FREQUENCY_DIVIDER" : "",
  "Generate_Constraint_File_of_Ports" : false,
  "Generate_IBIS_File" : false,
  "Generate_Plain_Text_Timing_Report" : false,
